cleanup of deprecations and some warnings Integer.valueOf instead of new Integer Double.valueOf instead of new Double